# bachelor-python-backend

./: .gitignore  README.md  app.py  auth.py  cacheService.py  functions.py  gunicorn_start  main.py  mainapp.py  pyproject.toml  requirements.txt  serviceapi.py  setup.py  shodanFunc.py  vercel.json
bachelor-backend/: app.py  functions.py  main.py  mainapp.py  shodan_cache.sqlite
backend/: app.py  auth.py  cacheService.py  databaseFunc.py  ipUrlFilter.py  main.py  shodanFunc.py
backend/apiExtentions/: databaseCheck.py  shodanDataFilter.py  shodanGetService.py  shodanSok.py
docker/: docker-compose.yml  init.sh  installDocker.sh  mongo-init.js  port.json
docker/data/: leder.json  port.json  user.json  versTekst.json  vulns.json
